--- a/css/components/form.scss
+++ b/css/components/form.scss
@@ -1,4 +1,5 @@
 .contact-form {
+
   .form-header {
     text-align: center;
     margin-bottom: 20px;
@@ -9,6 +10,8 @@
 
   #contactForm {
     text-align: center;
+    max-width: 900px;
+    margin: 0 auto;
     
     .form-side {
       width: 100%;
@@ -16,14 +19,16 @@
       @media (min-width: $breakpoint-tablet) {
         width: 45%;
         display: inline-block;
+      }
+    }
 
-        &:first-child {
-          text-align: right;
-        }
+    @media (min-width: $breakpoint-tablet) {
+      .form-side.left-side {
+        padding-right: 1%;
+      }
 
-        &:last-child {
-          text-align: left;
-        }
+      .form-side.right-side {
+        padding-left: 1%;
       }
     }
 
@@ -42,7 +47,7 @@
         display: block;
         margin-bottom: 2px;
         font-size: 12px;
-        margin-top: 10px;
+        margin-top: 20px;
 
         @media (min-width: $breakpoint-tablet) {
           font-size: 14px;
@@ -53,12 +58,12 @@
         border-radius: 3px;
         border: 1px solid $black;
         font-size: 14px;
-        padding: 5px;
+        padding: 10px 5px;
         width: 100%;
         box-sizing: border-box;
 
         @media (min-width: $breakpoint-desktop) {
-          font-size: 20px;
+          font-size: 16px;
         }
       }
     }
@@ -69,6 +74,8 @@
           display: inline-block;
           margin-right: 2%;
 
+
+
           &:last-child {
             margin-right: 0;
           }
@@ -76,6 +83,12 @@
 
         .form-date {
           width: 44%;
+          input {
+            height: 39px;
+            @media (min-width: $breakpoint-tablet) {
+              height: 41px;
+            }
+          }
         }
 
         .form-time {
@@ -91,7 +104,7 @@
           width: 48%;
           
           &:first-child {
-            margin-right: 2%;
+            margin-right: 3%;
           }
             
         }
@@ -111,8 +124,14 @@
 
       @media (min-width: $breakpoint-tablet) {
         margin: 20px auto;
+        width: 92%;
       }
 
+    }
+
+    .errorMessage {
+      position: absolute;
+      color: $red;
     }
 
     #contact-button {
