test logo fonts

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Scheherazade");
+@import url("https://fonts.googleapis.com/css?family=Lateef");
+@import url("https://fonts.googleapis.com/css?family=Amiri");
+@import url("https://fonts.googleapis.com/css?family=Source+Serif+Pro");
+@import url("https://fonts.googleapis.com/css?family=Poly");
 .green-text {
   color: #1A7A67; }
 
@@ -451,5 +456,23 @@ body {
     z-index: 800;
     width: 100%;
     display: none; }
+
+.test-poly {
+  font-family: 'Poly', serif; }
+
+.test-lateef {
+  font-family: 'Lateef', cursive; }
+
+.test-amiri {
+  font-family: 'Amiri', serif; }
+
+.test-source-serif {
+  font-family: 'Source Serif Pro', serif; }
+
+.test-scheherazade {
+  font-family: 'Scheherazade', serif; }
+
+.test-image {
+  width: 450px; }
 
 /*# sourceMappingURL=main.css.map */
