updated logos and content

--- a/css/application.scss
+++ b/css/application.scss
@@ -4,6 +4,7 @@
 @import "components/links";
 @import "components/nav";
 @import "components/landing";
+@import "components/mission";
 @import "components/menus";
 @import "components/team";
 @import "components/hours";
@@ -11,4 +12,3 @@
 @import "components/contact";
 @import "components/footer";
 @import "components/form";
-@import "components/font-test";
