--- a/css/components/fonts.scss
+++ b/css/components/fonts.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-
+@import url('https://fonts.googleapis.com/css?family=Amiri');
 
 .green-text {
   color: $green;
