--- a/css/components/landing.scss
+++ b/css/components/landing.scss
@@ -13,6 +13,7 @@
     font-size: 50px;
     color: $yellow;
     display: none;
+    font-family: 'Amiri', serif; 
     @media (min-width: $breakpoint-tablet) {
       font-size: 60px;
       display: block;
@@ -51,7 +52,6 @@
       }
 
     }
-
   }
   
 
