made image slider universal

--- a/css/application.scss
+++ b/css/application.scss
@@ -8,6 +8,7 @@
 @import "components/menus";
 @import "components/team";
 @import "components/hours";
+@import "components/image-slider";
 @import "components/events";
 @import "components/contact";
 @import "components/footer";
