--- a/css/main.css
+++ b/css/main.css
@@ -234,6 +234,39 @@ body {
       .hours-section .regular-hours-section h4 {
         font-size: 30px; } }
 
+.cornwalls-image-slider {
+  margin-top: 20px; }
+  .cornwalls-image-slider .slick-slide {
+    pointer-events: none; }
+  .cornwalls-image-slider .slick-prev {
+    left: 25px; }
+  .cornwalls-image-slider .slick-next {
+    right: 25px; }
+  .cornwalls-image-slider .slick-arrow {
+    width: 25px;
+    height: 25px;
+    z-index: 100; }
+    .cornwalls-image-slider .slick-arrow::before {
+      font-size: 25px;
+      opacity: 1; }
+  .cornwalls-image-slider img {
+    height: 300px;
+    border-left: 2px solid #FFFFFF; }
+  @media (min-width: 768px) {
+    .cornwalls-image-slider {
+      margin-top: 40px; }
+      .cornwalls-image-slider .slick-prev {
+        left: 50px; }
+      .cornwalls-image-slider .slick-next {
+        right: 50px; }
+      .cornwalls-image-slider .slick-arrow {
+        width: 50px;
+        height: 50px; }
+        .cornwalls-image-slider .slick-arrow::before {
+          font-size: 50px; }
+      .cornwalls-image-slider img {
+        height: 400px; } }
+
 .events-section h4 {
   font-size: 20px;
   font-weight: 300;
@@ -248,38 +281,6 @@ body {
   cursor: pointer;
   font-weight: 300;
   text-transform: uppercase; }
-.events-section .event-image-slider {
-  margin-top: 20px; }
-  .events-section .event-image-slider .slick-slide {
-    pointer-events: none; }
-  .events-section .event-image-slider .slick-prev {
-    left: 25px; }
-  .events-section .event-image-slider .slick-next {
-    right: 25px; }
-  .events-section .event-image-slider .slick-arrow {
-    width: 25px;
-    height: 25px;
-    z-index: 100; }
-    .events-section .event-image-slider .slick-arrow::before {
-      font-size: 25px;
-      opacity: 1; }
-  .events-section .event-image-slider img {
-    height: 300px;
-    border-left: 2px solid #FFFFFF; }
-  @media (min-width: 768px) {
-    .events-section .event-image-slider {
-      margin-top: 40px; }
-      .events-section .event-image-slider .slick-prev {
-        left: 50px; }
-      .events-section .event-image-slider .slick-next {
-        right: 50px; }
-      .events-section .event-image-slider .slick-arrow {
-        width: 50px;
-        height: 50px; }
-        .events-section .event-image-slider .slick-arrow::before {
-          font-size: 50px; }
-      .events-section .event-image-slider img {
-        height: 400px; } }
 @media (min-width: 768px) {
   .events-section h4 {
     font-size: 25px; }
