--- a/css/components/hours.scss
+++ b/css/components/hours.scss
@@ -6,8 +6,15 @@
     h4 {
       font-size: 20px;
       font-weight: 300;
+      line-height: 1.3;
     }  
+    h5 {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 1.3;
+    }
   }
+
 
   
 
@@ -17,7 +24,10 @@
       margin-top: 30px;
       h4 {
         font-size: 30px;
-      }  
+      } 
+      h5 {
+        font-size: 26px;
+      } 
     }
   }
 
@@ -27,7 +37,10 @@
 
       h4 {
         font-size: 30px;
-      }  
+      } 
+      h5 {
+        font-size: 26px;
+      } 
     }
   }
 }
