--- a/css/components/hours.scss
+++ b/css/components/hours.scss
@@ -3,6 +3,11 @@
 
   .regular-hours-section {
     margin-top: 25px;
+    
+    h3 {
+      font-size: 24px;
+      font-weight: 700;
+    }
     h4 {
       font-size: 20px;
       font-weight: 300;
@@ -22,6 +27,11 @@
 
     .regular-hours-section {
       margin-top: 30px;
+
+      h3 {
+        font-size: 34px;
+      }
+
       h4 {
         font-size: 30px;
       } 
