--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,12 @@ body {
     font-size: 10px;
     margin-right: 15px; }
 
+#event-contact-form {
+  display: none; }
+
+#confirmation {
+  margin-top: 20px; }
+
 .contact-form .form-header {
   text-align: center;
   margin-bottom: 20px; }
