--- a/css/components/landing.scss
+++ b/css/components/landing.scss
@@ -32,17 +32,29 @@
     }
 
     .landing-hours {
-      position: absolute;
-      top: 10px;
-      left: 0;
-      right: 0;
-      background: rgba(255, 255, 255, .7);
-      padding: 15px 0;
+      background: $yellow;
+      margin-top: -5px;
+      padding: 15px;
+      color: $white;
+
+      @media (min-width: $breakpoint-tablet) {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        right: 0;
+        margin-top: 0;
+        background: rgba(255, 255, 255, .7);
+        color: $black;
+        padding: 15px 0;
+      }
 
 
       h4 {
         font-size: 20px;
         font-weight: 300;
+        &:first-child {
+          margin-bottom: 10px;
+        }
         @media (min-width: $breakpoint-tablet) {
           font-size: 30px;
         }
