--- a/css/main.css
+++ b/css/main.css
@@ -135,15 +135,25 @@ body {
     .landing .landing-content .landing-image {
       width: 100%; }
     .landing .landing-content .landing-hours {
-      position: absolute;
-      top: 10px;
-      left: 0;
-      right: 0;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 15px 0; }
+      background: #E2A02D;
+      margin-top: -5px;
+      padding: 15px;
+      color: #FFFFFF; }
+      @media (min-width: 768px) {
+        .landing .landing-content .landing-hours {
+          position: absolute;
+          top: 10px;
+          left: 0;
+          right: 0;
+          margin-top: 0;
+          background: rgba(255, 255, 255, 0.7);
+          color: #000000;
+          padding: 15px 0; } }
       .landing .landing-content .landing-hours h4 {
         font-size: 20px;
         font-weight: 300; }
+        .landing .landing-content .landing-hours h4:first-child {
+          margin-bottom: 10px; }
         @media (min-width: 768px) {
           .landing .landing-content .landing-hours h4 {
             font-size: 30px; } }
