--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -5,7 +5,7 @@
 
   p {
     display: inline-block;
-    cursor: pointer;
+    // cursor: pointer;
     font-size: 10px;
     margin-right: 15px;
   }
