--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,22 @@ body {
     position: relative; }
     .landing .landing-content .landing-image {
       width: 100%; }
+    .landing .landing-content .gift-card-btn {
+      text-transform: uppercase;
+      display: inline-block;
+      margin-top: 30px;
+      color: #FFFFFF;
+      background: #1A7A67;
+      transition: background 1s ease;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      padding: 10px 30px; }
+      @media (min-width: 768px) {
+        .landing .landing-content .gift-card-btn {
+          font-size: 24px; } }
+      .landing .landing-content .gift-card-btn:hover {
+        background: #0C3A31; }
     .landing .landing-content .landing-hours {
       background: #E2A02D;
       margin-top: -5px;
