menu and order online updates

--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,8 @@ body {
     .landing .landing-content .takeout-btn, .landing .landing-content .table-order-btn {
       text-transform: uppercase;
       display: inline-block;
+      width: 300px;
+      padding: 15px;
       color: #FFFFFF;
       text-decoration: none;
       transition: background 1s ease;
@@ -149,11 +151,11 @@ body {
           font-size: 24px; } }
     .landing .landing-content .takeout-btn {
       background: #1A7A67;
-      margin-top: 30px; }
+      margin-top: 0; }
       .landing .landing-content .takeout-btn:hover {
         background: #0C3A31; }
     .landing .landing-content .table-order-btn {
-      margin-top: 10px;
+      margin-bottom: 25px;
       background: #E2A02D; }
       .landing .landing-content .table-order-btn:hover {
         background: #C88E28; }
