--- a/css/components/landing.scss
+++ b/css/components/landing.scss
@@ -34,6 +34,8 @@
     .takeout-btn, .table-order-btn {
       text-transform: uppercase;
       display: inline-block;
+      width: 300px;
+      padding: 15px;
       color: $white;
       text-decoration: none;
       transition: background 1s ease;
@@ -49,7 +51,7 @@
 
     .takeout-btn {
       background: $green;
-      margin-top: 30px;
+      margin-top: 0;
 
       &:hover {
         background: $dark-green;
@@ -58,7 +60,7 @@
     }
 
     .table-order-btn  {
-      margin-top: 10px;
+      margin-bottom: 25px;
       background: $yellow;
 
       &:hover {
