--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,9 @@ body {
   .yellow-border-section .white-background {
     background: #FFFFFF; }
 
+.margin-bottom-20 {
+  margin-bottom: 20px; }
+
 .clear-div {
   clear: both; }
 
